utils: Fix gaining realtime scheduling with musl

sched_setscheduler() is implemented as a stub in musl that does
nothing because Linux provides no way to set scheduling parameters
per process.

Use pthread_setschedparam() to change the scheduling parameters of
the threads instead.

BUG: 487996


(cherry picked from commit 5921be95d3bfcf239436681bc5fe7837c5cee203)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>